@@ -1,7 +1,7 @@
 `fitted.radfit` <-
     function(object, ...)
 {
-    matrix(sapply(object$models, fitted), ncol=length(object$models))
+    sapply(object$models, fitted)
 }
 
 `fitted.radfit.frame` <-
